--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,22 @@ wp-content/*
 
 # Ignore everything in the "plugins" directory, except the plugins you specify
 wp-content/plugins/*
+!wp-content/plugins/woocommerce/
 !wp-content/plugins/wc-frontend-manager/
 !wp-content/plugins/woo-variation-gallery/
+
+# Ignore everything in the "woocommerce" directory, except the specific paths
+wp-content/plugins/woocommerce/*
+!wp-content/plugins/woocommerce/includes
+
+# Ignore everything in the "woocommerce/includes" directory, except the specific paths
+wp-content/plugins/woocommerce/includes/*
+!wp-content/plugins/woocommerce/includes/data-stores/
+!wp-content/plugins/woocommerce/includes/class-wc-order.php
+
+# Ignore everything in the "woocommerce/includes/datastores" directory, except the specific paths
+wp-content/plugins/woocommerce/includes/data-stores/*
+!wp-content/plugins/woocommerce/includes/data-stores/class-wc-order-data-store-cpt.php
 
 # Ignore everything in the "themes" directory, except the themes you specify
 wp-content/themes/*
