--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ wp-content/*
 wp-content/plugins/*
 !wp-content/plugins/woocommerce/
 !wp-content/plugins/wc-frontend-manager/
+!wp-content/plugins/wc-multivendor-marketplace/
 !wp-content/plugins/woo-variation-gallery/
 
 # Ignore everything in the "woocommerce" directory, except the specific paths
@@ -30,6 +31,14 @@ wp-content/plugins/woocommerce/includes/*
 # Ignore everything in the "woocommerce/includes/datastores" directory, except the specific paths
 wp-content/plugins/woocommerce/includes/data-stores/*
 !wp-content/plugins/woocommerce/includes/data-stores/class-wc-order-data-store-cpt.php
+
+# Ignore everything in the "wc-multivendor-marketplace" directory, except the specific paths
+wp-content/plugins/wc-multivendor-marketplace/*
+!wp-content/plugins/wc-multivendor-marketplace/core/
+
+# Ignore everything in the "core" directory, except the specific paths
+wp-content/plugins/wc-multivendor-marketplace/core/*
+!wp-content/plugins/wc-multivendor-marketplace/core/class-wcfmmp-commission.php
 
 # Ignore everything in the "themes" directory, except the themes you specify
 wp-content/themes/*
