Add bin folder containing tool scripts

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 !.editorconfig
 !README.md
 !wp-content/
+!bin
 
 # Ignore everything in the "wp-content" directory, except the "plugins" and "themes" directories.
 wp-content/*
