--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "wordpress",
   "version": "1.0.0",
   "description": "LabelEpisode WordPress project",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jiayuzhang/LabelEpisode.git"
@@ -11,6 +10,12 @@
   "author": "jiayuzhang",
   "license": "ISC",
   "dependencies": {
-    "minimist": "^1.2.0"
+    "cheerio": "^1.0.0-rc.3",
+    "lodash": "^4.17.14",
+    "minimist": "^1.2.0",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7",
+    "slugify": "^1.3.4",
+    "woocommerce-api": "^1.4.2"
   }
 }
