--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.3",
     "lodash": "^4.17.14",
     "minimist": "^1.2.0",
+    "randomstring": "^1.1.5",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "slugify": "^1.3.4",
