--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "slugify": "^1.3.4",
+    "winston": "^3.2.1",
     "woocommerce-api": "^1.4.2"
   }
 }
